--- a/microservices/voting/templates/index.html
+++ b/microservices/voting/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='default.css') }}">
+    <link rel="stylesheet" type="text/css" href="/static/default.css">
     <title>{{title}}</title>
 
     <script language="JavaScript">
